fixed text-graphic overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ h1 {
 
 #Mont{
 	/*margin-left: 20px;*/
+	padding-left: 40px;
 }
 
 #container{
